Bug 349160 - k3b crashed when adding a directory to a project
Summary: k3b crashed when adding a directory to a project
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-06-14 19:06 UTC by Mark
Modified: 2016-09-12 06:19 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (9.49 KB, text/plain)
2015-06-14 19:14 UTC, Mark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark 2015-06-14 19:06:19 UTC
Application: k3b (2.0.3)
KDE Platform Version: 4.14.6
Qt Version: 4.8.6
Operating System: Linux 3.19.0-15-generic x86_64
Distribution: Ubuntu 15.04

-- Information about the crash:
- What I was doing when the application crashed:
I selected a directory and then clicked add to project and the application crashed.

-- Backtrace:
Application: K3b (k3b), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8b744a3800 (LWP 4117))]

Thread 4 (Thread 0x7f8b56fee700 (LWP 4118)):
#0  timerSourceCheckHelper (src=0x7f8b50003080) at kernel/qeventdispatcher_glib.cpp:154
#1  0x00007f8b68d818c1 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8b68d81e60 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8b68d81fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8b6ef1b87e in QEventDispatcherGlib::processEvents (this=0x7f8b500008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#5  0x00007f8b6eeead21 in QEventLoop::processEvents (this=this@entry=0x7f8b56fedd80, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f8b6eeeb085 in QEventLoop::exec (this=this@entry=0x7f8b56fedd80, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f8b6eddee89 in QThread::exec (this=this@entry=0xa81030) at thread/qthread.cpp:538
#8  0x00007f8b6eecb493 in QInotifyFileSystemWatcherEngine::run (this=0xa81030) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00007f8b6ede16ff in QThreadPrivate::start (arg=0xa81030) at thread/qthread_unix.cpp:349
#10 0x00007f8b6807e6aa in start_thread (arg=0x7f8b56fee700) at pthread_create.c:333
#11 0x00007f8b6d81beed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f8b4f7fe700 (LWP 4141)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007f8b6ede01da in thread_sleep (ti=ti@entry=0x7f8b4f7fddb0) at thread/qthread_unix.cpp:492
#2  0x00007f8b6ede09e3 in QThread::sleep (secs=secs@entry=2) at thread/qthread_unix.cpp:506
#3  0x00007f8b73d4daed in K3b::MediaCache::PollThread::run (this=0xb6d6e0) at /build/buildd/k3b-2.0.3/libk3b/tools/k3bmediacache.cpp:106
#4  0x00007f8b6ede16ff in QThreadPrivate::start (arg=0xb6d6e0) at thread/qthread_unix.cpp:349
#5  0x00007f8b6807e6aa in start_thread (arg=0x7f8b4f7fe700) at pthread_create.c:333
#6  0x00007f8b6d81beed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f8b4db37700 (LWP 4168)):
#0  0x00007f8b68d7ef1d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f8b68d817ef in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8b68d81e60 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8b68d81fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8b6ef1b87e in QEventDispatcherGlib::processEvents (this=0x7f8b440008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#5  0x00007f8b6eeead21 in QEventLoop::processEvents (this=this@entry=0x7f8b4db36d80, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f8b6eeeb085 in QEventLoop::exec (this=this@entry=0x7f8b4db36d80, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f8b6eddee89 in QThread::exec (this=this@entry=0xf2dec0) at thread/qthread.cpp:538
#8  0x00007f8b6eecb493 in QInotifyFileSystemWatcherEngine::run (this=0xf2dec0) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00007f8b6ede16ff in QThreadPrivate::start (arg=0xf2dec0) at thread/qthread_unix.cpp:349
#10 0x00007f8b6807e6aa in start_thread (arg=0x7f8b4db37700) at pthread_create.c:333
#11 0x00007f8b6d81beed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f8b744a3800 (LWP 4117)):
[KCrash Handler]
#6  0x00007f8b6d74a267 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:55
#7  0x00007f8b6d74beca in __GI_abort () at abort.c:89
#8  0x00007f8b6edd6a8a in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=0x14a3048 "ASSERT: \"i >= 0\" in file /usr/include/qt4/QtCore/qstring.h, line 885") at global/qglobal.cpp:2386
#9  0x00007f8b6edd6df9 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=0x7f8b6ef50e40 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7ffcffae3f10) at global/qglobal.cpp:2432
#10 0x00007f8b6edd76e1 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2615
#11 0x00000000004c0340 in operator[] (i=<optimized out>, this=<optimized out>) at /usr/include/qt4/QtCore/qstring.h:885
#12 K3b::DataUrlAddingDialog::slotAddUrls (this=0x109c020) at /build/buildd/k3b-2.0.3/src/projects/k3bdataurladdingdialog.cpp:342
#13 0x00007f8b6ef058e1 in QObject::event (this=0x109c020, e=<optimized out>) at kernel/qobject.cpp:1222
#14 0x00007f8b6e00a2e3 in QWidget::event (this=0x109c020, event=0x130e9b0) at kernel/qwidget.cpp:8859
#15 0x00007f8b6dfb69bc in QApplicationPrivate::notify_helper (this=this@entry=0x973cc0, receiver=receiver@entry=0x109c020, e=e@entry=0x130e9b0) at kernel/qapplication.cpp:4570
#16 0x00007f8b6dfbd4d8 in QApplication::notify (this=0x7ffcffae53d0, receiver=0x109c020, e=0x130e9b0) at kernel/qapplication.cpp:4356
#17 0x00007f8b6fba7b4a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#18 0x00007f8b6eeec1cd in QCoreApplication::notifyInternal (this=0x7ffcffae53d0, receiver=receiver@entry=0x109c020, event=event@entry=0x130e9b0) at kernel/qcoreapplication.cpp:955
#19 0x00007f8b6eeefa71 in sendEvent (event=0x130e9b0, receiver=0x109c020) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x92fc10) at kernel/qcoreapplication.cpp:1579
#21 0x00007f8b6eeeff03 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1472
#22 0x00007f8b6ef1b6ee in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#23 postEventSourceDispatch (s=0x966500) at kernel/qeventdispatcher_glib.cpp:300
#24 0x00007f8b68d81c3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f8b68d81f20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f8b68d81fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f8b6ef1b85e in QEventDispatcherGlib::processEvents (this=0x90e1b0, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#28 0x00007f8b6e05ec66 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f8b6eeead21 in QEventLoop::processEvents (this=this@entry=0x7ffcffae4ab0, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f8b6eeeb085 in QEventLoop::exec (this=this@entry=0x7ffcffae4ab0, flags=...) at kernel/qeventloop.cpp:204
#31 0x00007f8b6e490d9c in QDialog::exec (this=0x109c020) at dialogs/qdialog.cpp:562
#32 0x00000000004c1fec in K3b::DataUrlAddingDialog::slotStartAddUrls (this=0x109c020) at /build/buildd/k3b-2.0.3/src/projects/k3bdataurladdingdialog.cpp:216
#33 0x00007f8b6ef058e1 in QObject::event (this=0x109c020, e=<optimized out>) at kernel/qobject.cpp:1222
#34 0x00007f8b6e00a2e3 in QWidget::event (this=0x109c020, event=0xf5ad50) at kernel/qwidget.cpp:8859
#35 0x00007f8b6dfb69bc in QApplicationPrivate::notify_helper (this=this@entry=0x973cc0, receiver=receiver@entry=0x109c020, e=e@entry=0xf5ad50) at kernel/qapplication.cpp:4570
#36 0x00007f8b6dfbd4d8 in QApplication::notify (this=0x7ffcffae53d0, receiver=0x109c020, e=0xf5ad50) at kernel/qapplication.cpp:4356
#37 0x00007f8b6fba7b4a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#38 0x00007f8b6eeec1cd in QCoreApplication::notifyInternal (this=0x7ffcffae53d0, receiver=receiver@entry=0x109c020, event=event@entry=0xf5ad50) at kernel/qcoreapplication.cpp:955
#39 0x00007f8b6eeefa71 in sendEvent (event=0xf5ad50, receiver=0x109c020) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#40 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x92fc10) at kernel/qcoreapplication.cpp:1579
#41 0x00007f8b6eeeff03 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1472
#42 0x00007f8b6ef1b6ee in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#43 postEventSourceDispatch (s=0x966500) at kernel/qeventdispatcher_glib.cpp:300
#44 0x00007f8b68d81c3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#45 0x00007f8b68d81f20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#46 0x00007f8b68d81fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007f8b6ef1b85e in QEventDispatcherGlib::processEvents (this=0x90e1b0, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#48 0x00007f8b6e05ec66 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#49 0x00007f8b6eeead21 in QEventLoop::processEvents (this=this@entry=0x7ffcffae52e0, flags=...) at kernel/qeventloop.cpp:149
#50 0x00007f8b6eeeb085 in QEventLoop::exec (this=this@entry=0x7ffcffae52e0, flags=...) at kernel/qeventloop.cpp:204
#51 0x00007f8b6eef0b09 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1227
#52 0x00007f8b6dfb4c1c in QApplication::exec () at kernel/qapplication.cpp:3828
#53 0x0000000000444b26 in main (argc=<optimized out>, argv=<optimized out>) at /build/buildd/k3b-2.0.3/src/main.cpp:165

Possible duplicates by query: bug 264913.

Reported using DrKonqi
Comment 1 Mark 2015-06-14 19:14:48 UTC
Created attachment 93174 [details]
New crash information added by DrKonqi

k3b (2.0.3) on KDE Platform 4.14.6 using Qt 4.8.6

- What I was doing when the application crashed:

added a folder to the project, selected yes to "add hidden files", and selected "replace all" when duplicates appeared. Then the crash occurred.

-- Backtrace (Reduced):
#6  0x00007fa239923267 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:55
#7  0x00007fa239924eca in __GI_abort () at abort.c:89
[...]
#11 0x00000000004c0340 in operator[] (i=<optimized out>, this=<optimized out>) at /usr/include/qt4/QtCore/qstring.h:885
#12 K3b::DataUrlAddingDialog::slotAddUrls (this=0x19d77b0) at /build/buildd/k3b-2.0.3/src/projects/k3bdataurladdingdialog.cpp:342
#13 0x00007fa23b0de8e1 in QObject::event (this=0x19d77b0, e=<optimized out>) at kernel/qobject.cpp:1222
Comment 2 Leslie Zhai 2016-09-12 06:15:11 UTC
Nice bug hunter!
Comment 3 Leslie Zhai 2016-09-12 06:19:22 UTC
Git commit 4b66fff823cfc4ed892b6be5b516ad086fc3c69d by Leslie Zhai.
Committed on 12/09/2016 at 06:17.
Pushed by lesliezhai into branch 'master'.

Fix crashed when adding a directory to a project.

Someone forgot to check QString isEmpty...

M  +1    -1    src/projects/k3bdataurladdingdialog.cpp

http://commits.kde.org/k3b/4b66fff823cfc4ed892b6be5b516ad086fc3c69d