Fix crashed when adding a directory to a project.

Someone forgot to check QString isEmpty...

BUG: 349160